@@ -1,8 +1,9 @@
 (ns build
-  (:require [shadow.cljs.devtools.api :as shadow]
-            [clojure.tools.build.api :as b]))
+  (:require [babashka.process :as p]
+            [babashka.process.pprint]
+            [clojure.tools.build.api :as b]
+            [shadow.cljs.devtools.api :as shadow]))
 
-(def version "0.0.1-SNAPSHOT")
 (def class-dir "target/classes")
 (def uber-file "target/app.jar")
 
@@ -13,6 +14,7 @@
 (defn clean [_]
   (b/delete {:path "target"}))
 
+#_{:clj-kondo/ignore [:clojure-lsp/unused-public-var]}
 (defn uberjar [_]
   (clean nil)
   (b/copy-dir {:src-dirs ["src/clj" "src/cljc" "resources"]
@@ -21,14 +23,67 @@
   ;; Build frontend:
   (shadow/release :app)
 
-  #_
   (b/compile-clj {:basis @basis
-                  :ns-compile '[backend.main]
-                  :class-dir class-dir})
+                  :class-dir class-dir
+                  :compile-opts {:direct-linking true}})
 
   (b/uber {:class-dir class-dir
            :uber-file uber-file
-           ;; :main 'backend.main
+           :main 'backend.main
            :basis @basis})
 
   (println "Uberjar:" uber-file))
+
+
+#_{:clj-kondo/ignore [:clojure-lsp/unused-public-var]}
+(defn native-image [_]
+  (println "Compiling GraalVM feature classes")
+  (b/javac {:src-dirs ["src/java"]
+            :class-dir "target/native-image-configuration/classes"
+            :basis @basis
+            :javac-opts ["--add-exports" "org.graalvm.nativeimage/org.graalvm.nativeimage.impl=ALL-UNNAMED"
+                         "-Xlint:deprecation"]})
+
+  (println "Building native image")
+  (p/shell "native-image"
+
+           ;; Clojure namespaces
+           "--features=clj_easy.graal_build_time.InitClojureClasses"
+
+           ;; Buddy support
+           "--add-exports" "org.graalvm.nativeimage/org.graalvm.nativeimage.impl=ALL-UNNAMED"
+           "--features=graalvm.features.BouncyCastleFeature"
+
+           ;; Logback related classes
+           "--initialize-at-build-time=ch.qos.logback"
+           "--initialize-at-build-time=ch.qos.logback.classic.Logger"
+           "--initialize-at-build-time=org.xml.sax"
+
+           ;; Don't allow to fall back to launching a VM
+           "--no-fallback"
+
+           ;; To make shutdown hooks work
+           "--install-exit-handlers"
+
+           "--enable-monitoring"
+
+           "--emit" "build-report=native-image-build-report.html"
+
+           "--enable-sbom=export"
+
+           "-H:+UnlockExperimentalVMOptions"
+           "-H:IncludeResources=swagger-ui/.*" ;; TODO: Should create META-INF/native-image/metosin/ring-swagger-ui/native-image.properties
+
+           "-H:+PrintClassInitialization"
+
+           "-cp" (str
+                  ;; From training run with native-image-agent
+                  "target/native-image-configuration"
+                  ;; Compiled GraalVM feature classes, buddy support
+                  ":target/native-image-configuration/classes")
+
+           "--native-image-info"
+
+           "-jar" "target/app.jar"
+           "-o" "target/app")
+  (println "native image created: target/app"))
